# baguette

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/baguette-app/: Cargo.toml
crates/baguette-app/src/: application.rs  lib.rs
crates/baguette-app/src/dispatch/: dynamic.rs  static.rs
crates/baguette-audio/: Cargo.toml
crates/baguette-audio/src/: lib.rs
crates/baguette-egui/: Cargo.toml
crates/baguette-egui/src/: lib.rs
crates/baguette-gameloop/: Cargo.toml
crates/baguette-gameloop/src/: lib.rs
crates/baguette-input/: Cargo.toml
crates/baguette-input/src/: lib.rs
crates/baguette-math/: Cargo.toml
crates/baguette-math/src/: lib.rs
crates/baguette-proc/: Cargo.toml
crates/baguette-proc/src/: lib.rs
crates/baguette-rendering/: Cargo.toml
crates/baguette-rendering/src/: lib.rs
crates/baguette-rendering/src/rendering/: camera.rs  renderer.rs  renderpasses.rs
crates/baguette-rendering/src/rendering/2d/: sprite.rs  sprite.wgsl  spritepass.rs  spritesheet.rs  tilemap.rs  tilemap.wgsl
crates/baguette-rendering/src/rendering/postprocess/: blur.rs  noise.rs  postprocess.rs
crates/baguette-rendering/src/rendering/postprocess/shaders/: mix.wgsl
crates/baguette-rendering/src/rendering/raw/: mesh.rs  texture.rs  transform.rs  vertex.rs
crates/baguette-rendering/src/rendering/renderer/: util.rs
crates/baguette-rendering/src/rendering/renderpasses/: resolutionpass.rs  spritepass.rs
crates/baguette-rendering/src/rendering/shaders/: blur.wgsl  noise.wgsl  postprocess.wgsl  shader.wgsl  tex_to_tex_copy.wgsl
crates/baguette-rendering/src/rendering/ui/: egui_wgpu.rs  egui_winit.rs  ui.rs
examples/: cam_movement.rs  sprite_sorting.rs  spritesheet.rs  tilemap.rs  transitions.rs  ui.rs
src/: application.rs  lib.rs  main.rs  util.rs
src/application/: scene.rs
