[package]
name = "baguette-input"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "*"
once_cell = "*"
winit = { version = "0.29", features = ["rwh_05"] }
baguette-math = { workspace = true }