[package]
name = "baguette-rendering"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
wgpu = "0.20"
pollster = "*"
bytemuck = { version = "*", features = [ "derive" ]}
image = { version = "*", features = ["png", "jpeg"]}
baguette-math = { workspace = true }
input = { workspace = true }
once_cell = "*"


egui = { version = "*", features = ["bytemuck",] }
type-map = "*"