[package]
name = "baguette-rendering"
version = "0.2.0"
edition = "2021"
license.workspace = true

[dependencies]
wgpu = "0.20"
pollster = "*"
bytemuck = { version = "*", features = [ "derive" ]}
image = { version = "*", features = ["png", "jpeg"]}
baguette-math = { workspace = true }
input = { workspace = true }


egui = { version = "*", features = ["bytemuck",] }
type-map = "*"