[package]
name = "baguette-rendering"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
wgpu = { version = "0.20.1", features = ["serde"]}
serde = { workspace = true }
pollster = "*"
bincode = "*"
bytemuck = { version = "*", features = ["derive"]}
image = { version = "*", features = ["png", "jpeg"]}
baguette-math = { workspace = true }
input = { workspace = true }
indexmap = { version = "*", features = ["serde"]}
parking_lot = { version = "*", features = ["arc_lock"]}

egui = { version = "*", features = ["bytemuck"]}
type-map = "*"
